# artemis

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: validate.yml
artemis/: db.py  main.py  routes.py  schemas.py
tests/: test_db.py  test_routes.py
