[tool.poetry]
name = "artemis"
version = "0.1.0"
description = "Create, Read, Update and Delete events through a REST API"
authors = ["nanchano <nicolas.anchanio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
SQLAlchemy = "^2.0.22"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
mypy = "^1.6.1"
isort = "^5.12.0"
pytest = "^7.4.3"
coverage = "^7.3.2"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
